[gd_scene load_steps=39 format=3 uid="uid://4o3uxpsufg1o"]

[ext_resource type="Script" path="res://Scripts/Skeleton.gd" id="1_dfxl2"]
[ext_resource type="Texture2D" uid="uid://cx3v4tvq1sd1i" path="res://Character Art/Skeleton/Skeleton.png" id="2_8su0m"]
[ext_resource type="Texture2D" uid="uid://b85mqc60a1mi1" path="res://Extra Art/pixel_style1.png" id="3_pk416"]
[ext_resource type="AudioStream" uid="uid://ditrh0ygueeis" path="res://Audio/alert.wav" id="4_od7mh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iem3q"]
atlas = ExtResource("2_8su0m")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coekk"]
atlas = ExtResource("2_8su0m")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iup0"]
atlas = ExtResource("2_8su0m")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3052"]
atlas = ExtResource("2_8su0m")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl3xi"]
atlas = ExtResource("2_8su0m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkeka"]
atlas = ExtResource("2_8su0m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2pd8"]
atlas = ExtResource("2_8su0m")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sp5t"]
atlas = ExtResource("2_8su0m")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42x1s"]
atlas = ExtResource("2_8su0m")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsudx"]
atlas = ExtResource("2_8su0m")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axhl2"]
atlas = ExtResource("2_8su0m")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia6e8"]
atlas = ExtResource("2_8su0m")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12ove"]
atlas = ExtResource("2_8su0m")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plpgu"]
atlas = ExtResource("2_8su0m")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqbvc"]
atlas = ExtResource("2_8su0m")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtxkx"]
atlas = ExtResource("2_8su0m")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eswc"]
atlas = ExtResource("2_8su0m")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxfmf"]
atlas = ExtResource("2_8su0m")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxsfy"]
atlas = ExtResource("2_8su0m")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k360d"]
atlas = ExtResource("2_8su0m")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hjxc"]
atlas = ExtResource("2_8su0m")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_muks1"]
atlas = ExtResource("2_8su0m")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmror"]
atlas = ExtResource("2_8su0m")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opbx7"]
atlas = ExtResource("2_8su0m")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh43c"]
atlas = ExtResource("2_8su0m")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jks7d"]
atlas = ExtResource("2_8su0m")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rx1e"]
atlas = ExtResource("2_8su0m")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q0dl"]
atlas = ExtResource("2_8su0m")
region = Rect2(96, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vexot"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iem3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coekk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iup0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3052")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl3xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkeka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2pd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sp5t")
}],
"loop": true,
"name": &"down_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42x1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsudx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axhl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia6e8")
}],
"loop": true,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ove")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plpgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqbvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtxkx")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eswc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxfmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxsfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k360d")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hjxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muks1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmror")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opbx7")
}],
"loop": true,
"name": &"up_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh43c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jks7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rx1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q0dl")
}],
"loop": true,
"name": &"up_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0bvwu"]
radius = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jibi8"]
radius = 71.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5w11g"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_12x3h"]
atlas = ExtResource("3_pk416")
region = Rect2(128, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a7wgo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12x3h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_dfxl2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vexot")
animation = &"side_walk"
frame_progress = 0.97491
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_0bvwu")

[node name="detection_area2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area2"]
shape = SubResource("CircleShape2D_jibi8")

[node name="BattleDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleDetection"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_5w11g")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, -19)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_a7wgo")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_od7mh")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="detection_area2" to="." method="_on_detection_area_2_body_entered"]
[connection signal="body_exited" from="detection_area2" to="." method="_on_detection_area_2_body_exited"]
[connection signal="body_entered" from="BattleDetection" to="." method="_on_battle_detection_body_entered"]
